# dynamic_regex.h

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compiler.c  execute.c  int_stack.c  int_stack.h  lexer.c  main.c  parser.c  regex.c  regex.h
tests/: test_alternation.c  test_anchors.c  test_api.c  test_basic.c  test_boundaries.c  test_charsets.c  test_complex.c  test_edge_cases.c  test_escapes.c  test_flags.c  test_groups.c  test_performance.c  test_quantifiers.c  test_runner.c  test_shared.h
